src/objects/StudentCourseRegistration__c.object
<CustomObject>
    <description>This is an object for pulling current term registration  information from WGUFDP. No FDP user should have direct access to this Object,</description>
    <fields>
        <fullName>Banneractivitydate__c</fullName>
        <description>last update or insert date on banner for this record</description>
        <label>Banner Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CourseCode__c</fullName>
        <description>Banner code for the course</description>
        <label>CourseCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngagementNotedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who noted the student engagement with the course.</description>
        <label>Engagement Noted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>StudentCourseRegistrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EngagementNotedDate__c</fullName>
        <description>Date and time when student engagement with the course was noted.</description>
        <label>Engagement Noted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsEngaged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether the student is marked as being currently engaged with the course.</description>
        <label>Is Engaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The student associated with this registration. (used to speed up queries on this table)</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>StudentCourseRegistrations</relationshipLabel>
        <relationshipName>StudentCourseRegistrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Termcode__c</fullName>
        <label>Termcode</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGUCourse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookout for wgucourse.</description>
        <label>WGU Course</label>
        <referenceTo>WGUCourse__c</referenceTo>
        <relationshipLabel>Student Course Registrations</relationshipLabel>
        <relationshipName>StudentCourseRegistrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>enddate__c</fullName>
        <label>enddate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pidm__c</fullName>
        <description>Identifier referencing this contact&apos;s Sungard Banner UUID, which is the key value used internally by SunGard Banner for referential integrity</description>
        <inlineHelpText>Specify the numerical identifier of this contact&apos;s SunGard Banner record identifier</inlineHelpText>
        <label>pidm</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>startdate__c</fullName>
        <label>startdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>uniqueid__c</fullName>
        <externalId>true</externalId>
        <label>uniqueid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Student Course Registration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Banneractivitydate__c</columns>
        <columns>CourseCode__c</columns>
        <columns>enddate__c</columns>
        <columns>pidm__c</columns>
        <columns>startdate__c</columns>
        <columns>Termcode__c</columns>
        <columns>uniqueid__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>StudentCourseRegistration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Course Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>